fix overflow problem

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: 'Montserrat Alternates', sans-serif;
 }
 .container {
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
